--- a/.github/workflows/surge_deployment.yml
+++ b/.github/workflows/surge_deployment.yml
@@ -33,7 +33,9 @@ jobs:
     
     - name: Build React App
       run: yarn build
-        
+      env:
+         CI: ""
+      
     - name: Install Surge
       run: npm install -g surge
     - name: Run surge
