update the surge_deployment
change the env.CI to false for not take warning as errors

--- a/.github/workflows/surge_deployment.yml
+++ b/.github/workflows/surge_deployment.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Build React App
       run: yarn build
       env:
-         CI: ""
+         CI: false
       
     - name: Install Surge
       run: npm install -g surge
